--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -25,22 +25,18 @@
   "О нас": "About us",
   "Мы в сетях": "We are on social media",
   "Телефон": "Phone",
-    "Аналитические обзоры": "Analytical reviews",
-    "Полезные статьи": "Useful articles",
-    "Обучение": "Education",
-    "Состояние инвестиционного портфеля на": "Investment portfolio's status",
-
-    "Качественный сервис по умеренным ценам": "High-quality service at reasonable prices",
-    "Финансовая устойчивость и стабильность": "Financial stability",
-
-    "Самый крупный гарантийный фонд": "The largest guarantee fund",
-    "Профессиональная команда": "Professional team",
-    "15 лет успешной деятельности": "15 years of successful activity",
-    "Лучший инвестиционный консультант": "Best Investment Advisor",
-
-    "Лицензии и сертификаты": "Licenses and certificates",
-
-    "Компания с большой историей": "A company with a long history",
+  "Аналитические обзоры": "Analytical reviews",
+  "Полезные статьи": "Useful articles",
+  "Обучение": "Education",
+  "Состояние инвестиционного портфеля на": "Investment portfolio's status",
+  "Качественный сервис по умеренным ценам": "High-quality service at reasonable prices",
+  "Финансовая устойчивость и стабильность": "Financial stability",
+  "Самый крупный гарантийный фонд": "The largest guarantee fund",
+  "Профессиональная команда": "Professional team",
+  "15 лет успешной деятельности": "15 years of successful activity",
+  "Лучший инвестиционный консультант": "Best Investment Advisor",
+  "Лицензии и сертификаты": "Licenses and certificates",
+  "Компания с большой историей": "A company with a long history",
   "Адрес": "Address",
   "Наши реквизиты": "Our details",
   "Наша команда": "Our team",
@@ -49,26 +45,21 @@
   "Вход в личный кабинет": "Login to your account",
   "Выход": "Log out",
   "Инфо": "Info",
-    "Ключ в мир ценных бумаг": "Key to the world of securities",
-    "Аналитика": "Analytics",
-
-    "Тикер": "Ticker",
-
-    "Руководители": "Key Executives",
-    "Сектор": "Sector(s)",
-    "Промышленность": "Industry",
-    "Имя": "Name",
-    "Описание": "Description",
-    "Должность": "Title",
-
-    "Последняя цена": "Last price",
-    "Изменение": "Сhanges",
-    "Объём": "Volume",
-    "Рыночная кап.": "Market cap.",
-    "График за месяц": "Monthly schedule",
-
-
-    "Тарифы": "Tariffs",
+  "Ключ в мир ценных бумаг": "Key to the world of securities",
+  "Аналитика": "Analytics",
+  "Тикер": "Ticker",
+  "Руководители": "Key Executives",
+  "Сектор": "Sector(s)",
+  "Промышленность": "Industry",
+  "Имя": "Name",
+  "Описание": "Description",
+  "Должность": "Title",
+  "Последняя цена": "Last price",
+  "Изменение": "Сhanges",
+  "Объём": "Volume",
+  "Рыночная кап.": "Market cap.",
+  "График за месяц": "Monthly schedule",
+  "Тарифы": "Tariffs",
   "Посмотреть Все тарифы": "View All Rates",
   "от": "from",
   "Главная": "Home",
@@ -92,106 +83,88 @@
   "Индекс": "Index",
   "Мы понимаем нужды наших клиентов, потому что мы сами являемся инвесторами": "We understand the needs of our customers, because we are investors ourselves",
   "Применить": "Apply",
-
   "Общее": "Summary",
   "Баланс": "Balance",
   "Финансовый отчёт": "Financial report",
   "Анализ": "Analysis",
   "Профиль": "Profile",
-    "Специалисты компании": "Company specialists",
-
-    "Облигации": "Bonds",
+  "Специалисты компании": "Company specialists",
+  "Облигации": "Bonds",
   "Ставка": "Rate",
   "млрд": "bln",
   "лет": "years",
-    "СВЯЖИТЕСЬ С НАМИ": "CONTACT US",
-    "Получите бесплатную консультацию": "Get a free consultation",
-
-    "Аналитические обзоры новостей": "Analytical news reviews",
-
-    "Награды": "Awards",
+  "СВЯЖИТЕСЬ С НАМИ": "CONTACT US",
+  "Получите бесплатную консультацию": "Get a free consultation",
+  "Аналитические обзоры новостей": "Analytical news reviews",
+  "Награды": "Awards",
   "Команда специалистов": "Team of specialists",
   "Лидер по объему сделок": "Leader in terms of volume of transactions",
   "Один из крупнейших гарант.фонд": "One of the largest guarantee fund",
-
   "Цена": "Price",
   "Тарифные планы": "Pricing plans",
-
   "почему": "why",
   "клиентов": "clients",
   "Отзывы клиентов": "Customer reviews",
   "Наши прайм партнёры": "Our prime partners",
-
   "НАШИ ИДЕИ": "OUR IDEAS",
   "ПОЧЕМУ МЫ": "WHY ARE WE",
   "НАШИ КЛИЕНТЫ": "OUR CLIENTS",
   "НАШИ ДОСТИЖЕНИЯ": "OUR ACHIEVEMENTS",
-
   "выбирают нас": "choose us",
-    "Акции": "Stocks",
-    "партнёры": "partners",
-    "Трейдинг": "Trading",
-    "Корпоративным и институциональным клиентам": "For corporate and institutional clients",
-    "Как начать -  ТОРГОВАТЬ": "How to start - TRADE",
-    "Как начать торговать": "How to start trade",
-    "Тарифы для юридических лиц": "Pricing for legal entities",
-    "Корпоративным и": "For corporate and",
-    "институциональным клиентам": "institutional clients",
-
-
-    "перейти на страницу": "link to page",
-    "Название": "Name",
+  "Акции": "Stocks",
+  "партнёры": "partners",
+  "Трейдинг": "Trading",
+  "Корпоративным и институциональным клиентам": "For corporate and institutional clients",
+  "Как начать -  ТОРГОВАТЬ": "How to start - TRADE",
+  "Как начать торговать": "How to start trade",
+  "Тарифы для юридических лиц": "Pricing for legal entities",
+  "Корпоративным и": "For corporate and",
+  "институциональным клиентам": "institutional clients",
+  "перейти на страницу": "link to page",
+  "Название": "Name",
   "Дата / Cрок погошения": "Date / Expired date",
   "Войти в личный кабинет": "Enter your personal account",
-
-    "Инвестиции": "Investments",
-    "Всего капитал": "Total capital",
-    "Тип ЦБ": "Type of Sec",
-    "Кол-во ЦБ": "Number of Sec",
-    "Тек. цена": "Current price",
-    "сум": "uzs",
-    "Год": "Year",
-    "Нет данных": "No data",
-    "КЗЛ": "CRP",
-    "Новый пароль": "New password",
-    "Текущий пароль": "Current password",
-    "Подтвердить новый пароль": "Confirm new password",
-    "Сохранить": "Save",
-    "Введите сумму": "Enter the amount",
-
-    "Номер договора": "Deal number",
-    "Имя Фамилия": "Name",
-    "Пополнение счёта": "Refill",
-
-    "Profit & Loss": "Profit & Loss",
-    "перейти в кабинет": "move to profile",
-
-    "Цена окупаемости инвестиции": "Return on investment price",
-    "Cумма инвестиций": "Amount of investment",
-    "перейти в кабинет": "Previous Close",
-    "Компания": "Company",
-    "Открытые Сделки/Позиции,Портфель": "Open Trades/Positions",
-
-
-
-    "Цена закрытия": "Previous Close",
-
-
-
-
-    "Дневной диапозон": "Day's Range",
-    "52 недельный диапозон": "52 Week Range",
-    "52 недельный Объём": "52 Week volume",
-    "Простые акции": "Common stocks",
-    "Привилегированные акции": "Preference shares",
-    "Рыночная капитализация": "Market Cap",
-    "Изменения за месяц": "Month change",
-    "Изменения за год": "Year change",
-    "В случае капитализации": "In case of capitalization",
-    "Номинальная стоимость": "Face value of shares",
-    "Дивиденды": "DIVIDEND",
-    "Сумма": "Sum",
-
-    "Дивидендная история": "Historical dividends"
-
+  "Инвестиции": "Investments",
+  "Всего капитал": "Total capital",
+  "Тип ЦБ": "Type of Sec",
+  "Кол-во ЦБ": "Number of Sec",
+  "Тек. цена": "Current price",
+  "сум": "uzs",
+  "Год": "Year",
+  "Нет данных": "No data",
+  "КЗЛ": "CRP",
+  "Новый пароль": "New password",
+  "Текущий пароль": "Current password",
+  "Подтвердить новый пароль": "Confirm new password",
+  "Сохранить": "Save",
+  "Введите сумму": "Enter the amount",
+  "Номер договора": "Deal number",
+  "Имя Фамилия": "Name",
+  "Пополнение счёта": "Refill",
+  "Profit & Loss": "Profit & Loss",
+  "перейти в кабинет": "move to profile",
+  "Цена окупаемости инвестиции": "Return on investment price",
+  "Cумма инвестиций": "Amount of investment",
+  "перейти в кабинет": "Previous Close",
+  "Компания": "Company",
+  "Открытые Сделки/Позиции,Портфель": "Open Trades/Positions",
+  "Цена закрытия": "Previous Close",
+  "Дневной диапозон": "Day's Range",
+  "52 недельный диапозон": "52 Week Range",
+  "52 недельный Объём": "52 Week volume",
+  "Простые акции": "Common stocks",
+  "Привилегированные акции": "Preference shares",
+  "Рыночная капитализация": "Market Cap",
+  "Изменения за месяц": "Month change",
+  "Изменения за год": "Year change",
+  "В случае капитализации": "In case of capitalization",
+  "Номинальная стоимость": "Face value of shares",
+  "Дивиденды": "DIVIDEND",
+  "Сумма": "Sum",
+  "Дивидендная история": "Historical dividends",
+  "Доходность": "profitability",
+  "Дата размещения": "Posting date",
+  "Дата погошения": "Burning date",
+  "Номинал": "Denomination",
+  "Срок обращения": "Term of circulation"
 }
