--- a/resources/lang/uz.json
+++ b/resources/lang/uz.json
@@ -23,17 +23,14 @@
   "О нас": "Biz haqimizda",
   "Мы в сетях": "Biz ijtimoiy tarmoqlarda",
   "Телефон": "Telefon",
-    "Качественный сервис по умеренным ценам": "Ma’qul narxlarda sifatli servis",
-
-    "Адрес": "Manzil",
-    "Инфо": "Info",
-    "Нет данных": "Ma'lumot mavjud emas",
-    "Финансовая устойчивость и стабильность": "Moliyaviy barqarorlik",
-
-    "Год": "Yil",
-    "Обучение": "Ta'lim",
-
-    "Наша команда": "Bizning jamoamiz",
+  "Качественный сервис по умеренным ценам": "Ma’qul narxlarda sifatli servis",
+  "Адрес": "Manzil",
+  "Инфо": "Info",
+  "Нет данных": "Ma'lumot mavjud emas",
+  "Финансовая устойчивость и стабильность": "Moliyaviy barqarorlik",
+  "Год": "Yil",
+  "Обучение": "Ta'lim",
+  "Наша команда": "Bizning jamoamiz",
   "Узнать подробнее": "Ko'proq ma'lumot oling",
   "Новости компании": "Yangiliklar",
   "Вход в личный кабинет": "Hisobingizga kiring",
@@ -45,9 +42,8 @@
   "Раскрытие информации": "Bizning asosiy hamkorlarimiz",
   "Ваш ID": "Sizning ID",
   "Пароль": "Parol",
-    "Тарифные планы": "Tarif rejalari",
-
-    "Полезные статьи": "Foydali maqolalar",
+  "Тарифные планы": "Tarif rejalari",
+  "Полезные статьи": "Foydali maqolalar",
   "Запомнить": "Yodda saqlash",
   "Последние новости": "So’ngi yangiliklar",
   "Наши прайм партнёры": "Bizning asosiy hamkorlarimiz",
@@ -58,141 +54,116 @@
   "Доход Расход": "Daromad Xarajatlari",
   "Отчет о финансовых результатах": "Moliyaviy natijalar to'g'risidagi hisobot",
   "Квартал": "Chorak",
-    "Применить": "Ishlatish",
-
-    "Последние котировки": "So'nggi kotirovka",
+  "Применить": "Ishlatish",
+  "Последние котировки": "So'nggi kotirovka",
   "Контакты": "Aloqa",
   "Рыночные данные": "Bozor ma'lumoti",
   "Наши предложения": "Takliflarimiz",
   "Индекс": "Indeks",
-    "Мы понимаем нужды наших клиентов, потому что мы сами являемся инвесторами": "Biz mijozlarimizning ehtiyojlarini tushunamiz, chunki biz o’zimiz Investormiz",
-
-    "Специалисты компании": "Kompaniya mutaxassislari",
-    "млрд": "mlrd",
-    "Лицензии и сертификаты": "Litsenziyalar va sertifikatlar",
-    "Наши реквизиты": "Bizning tafsilotlarimiz",
-    "Компания с большой историей": "Uzoq tarixga ega kompaniya",
-    "Миссия": "Missiya",
-    "Состояние инвестиционного портфеля на": "Portfel holati",
-
-    "Самый крупный гарантийный фонд": "Eng yirik kafolat fondi",
-    "Профессиональная команда": "Professionallar jamoasi",
-    "15 лет успешной деятельности": "15 yillik muvaffaqiyatli faoliyat",
-    "Лучший инвестиционный консультант": "Eng yaxshi investitsiya maslahatchisi",
-
-
-    "лет": "yil",
-    "СВЯЖИТЕСЬ С НАМИ": "BIZ BILAN BOGLANING",
-    "Получите бесплатную консультацию": "Bepul maslahat oling",
-
-
-    "клиентов": "mijozlar",
-    "Отзывы клиентов": "Mijozlarning sharhlari",
-    "Аналитические обзоры новостей": "Analitik yangiliklar sharhlari",
-
-    "Награды": "Mukofotlar",
-    "Один из крупнейших гарант.фонд": "Eng yirik kafil fondlaridan biri",
-    "Команда специалистов": "Mutaxassislar jamoasi",
-    "Лидер по объему сделок": "Bitimlar hajmi bo'yicha etakchi",
-
-
-    "Общее": "Umumiy",
-    "Баланс": "Balans",
-    "Финансовый отчёт": "Moliyaviy hisobot",
-    "Анализ": "Analiz",
-    "Профиль": "Profil",
-    "Облигации": "Obligatsiya",
-    "Ставка": "Foiz",
-    "Ключ в мир ценных бумаг": "Qimmatli qogozlar dunyosining kaliti",
-    "Цена": "Narx",
-    "почему": "Nima uchun",
-    "выбирают нас": "bizni tanlashadi",
-    "Наши прайм партнёры": "Bizning asosiy hamkorlarimiz",
-
-
-    "НАШИ ИДЕИ": "BIZNING G'OYALARIMIZ",
-    "ПОЧЕМУ МЫ": "NIMA UCHUN BIZ",
-    "НАШИ КЛИЕНТЫ": "BIZNING MJOZLARIMIZ",
-    "НАШИ ДОСТИЖЕНИЯ": "BIZNING YUTUQIMIZ",
-
-
-    "Тикер": "Ticker",
-    "Последняя цена": "Oxirgi narx",
-    "Изменение": "O'zgarish",
-    "Объём": "Hajm",
-    "Рыночная кап.": "Bozor qiymati",
-    "График за месяц": "Oylik jadval",
-    "Название": "Nomi",
-    "Аналитические обзоры": "Analitik materiallar",
-    "Акции": "Aksiya",
-    "партнёры": "hamkorlar",
-
-
-
-    "Руководители": "Kompaniya rahbariyati",
-    "Сектор": "Sektor",
-    "Промышленность": "Sanoat",
-    "Имя": "Ism",
-    "Описание": "Tavsif",
-    "Должность": "Lavozim",
-
-    "Трейдинг": "Treyding",
-    "Как начать -  ТОРГОВАТЬ": "Treydingni boshlash",
-    "Как начать торговать": "Treydingni boshlash",
-    "перейти на страницу": "sahifaga o'ting",
-    "Тарифы для юридических лиц": "Yuridik shaxslar uchun tariflar",
-    "Корпоративным и": "Korporativ va",
-    "институциональным клиентам": "institutsional mijozlarga",
-    "Корпоративным и институциональным клиентам": "Korporativ va institutsional mijozlarga",
-
-    "Инвестиции": "Investitsiyalar",
-    "Всего капитал": "Jami kapital",
-    "сум": "so'm",
-
-    "Открытые Сделки/Позиции,Портфель": "Ochiq savdolar",
-    "Компания": "Kompaniya",
-    "Profit & Loss": "Foyda va Zarar",
-    "перейти в кабинет": "kabinetga o'tish",
-    "КЗЛ": "KZL",
-    "Сохранить": "Saqlash",
-    "Новый пароль": "Yangi parol",
-    "Текущий пароль": "Joriy parol",
-    "Подтвердить новый пароль": "Yangi parolni tasdiqlang",
-
-    "Введите сумму": "Summani kiriting",
-    "Пополнение счёта": "Hisobni to'ldirish",
-    "Номер договора": "Shartnoma raqami",
-    "Имя Фамилия": "Name",
-    "Тип ЦБ": "Qimmatli qog'ozlar turi",
-    "Кол-во ЦБ": "Qimmatli qog'ozlar soni",
-    "Cумма инвестиций": "Investitsiyalar summasi",
-    "Тек. цена": "Joriy narx",
-    "Цена окупаемости инвестиции": "Investitsiyaning qaytarilish summasi",
-
-
-
-
-
-
-
-    "Войти в личный кабинет": "Shaxsiy hisobingizni kiriting",
-    "Дата / Cрок погошения": "Sana / To'lov muddati",
-    "Кабинет": "Kabinet",
-    "Наши награды": "Bizning mukofotlarimiz",
-
-    "Цена закрытия": "Oxirgi narx",
-    "Дневной диапозон": "Kun oralig'i",
-    "52 недельный диапозон": "52 hafta oralig'i",
-    "52 недельный Объём": "52 haftalik hajm",
-    "Простые акции": "Oddiy aksiya",
-    "Привилегированные акции": "Imtiyozli aksiya",
-    "Рыночная капитализация": "Bozor kapitalizatsiyasi",
-    "Изменения за месяц": "Oylik o'zgarishlar",
-    "Изменения за год": "Yillik o'zgarishlar",
-    "В случае капитализации": "Kapitalizatsiya holatida",
-    "Номинальная стоимость": "Nominal narx",
-    "Дивиденды": "Dividend",
-    "Сумма": "Summa",
-    "Дивидендная история": "Dividend tarixi"
-
+  "Мы понимаем нужды наших клиентов, потому что мы сами являемся инвесторами": "Biz mijozlarimizning ehtiyojlarini tushunamiz, chunki biz o’zimiz Investormiz",
+  "Специалисты компании": "Kompaniya mutaxassislari",
+  "млрд": "mlrd",
+  "Лицензии и сертификаты": "Litsenziyalar va sertifikatlar",
+  "Наши реквизиты": "Bizning tafsilotlarimiz",
+  "Компания с большой историей": "Uzoq tarixga ega kompaniya",
+  "Миссия": "Missiya",
+  "Состояние инвестиционного портфеля на": "Portfel holati",
+  "Самый крупный гарантийный фонд": "Eng yirik kafolat fondi",
+  "Профессиональная команда": "Professionallar jamoasi",
+  "15 лет успешной деятельности": "15 yillik muvaffaqiyatli faoliyat",
+  "Лучший инвестиционный консультант": "Eng yaxshi investitsiya maslahatchisi",
+  "лет": "yil",
+  "СВЯЖИТЕСЬ С НАМИ": "BIZ BILAN BOGLANING",
+  "Получите бесплатную консультацию": "Bepul maslahat oling",
+  "клиентов": "mijozlar",
+  "Отзывы клиентов": "Mijozlarning sharhlari",
+  "Аналитические обзоры новостей": "Analitik yangiliklar sharhlari",
+  "Награды": "Mukofotlar",
+  "Один из крупнейших гарант.фонд": "Eng yirik kafil fondlaridan biri",
+  "Команда специалистов": "Mutaxassislar jamoasi",
+  "Лидер по объему сделок": "Bitimlar hajmi bo'yicha etakchi",
+  "Общее": "Umumiy",
+  "Баланс": "Balans",
+  "Финансовый отчёт": "Moliyaviy hisobot",
+  "Анализ": "Analiz",
+  "Профиль": "Profil",
+  "Облигации": "Obligatsiya",
+  "Ставка": "Foiz",
+  "Ключ в мир ценных бумаг": "Qimmatli qogozlar dunyosining kaliti",
+  "Цена": "Narx",
+  "почему": "Nima uchun",
+  "выбирают нас": "bizni tanlashadi",
+  "Наши прайм партнёры": "Bizning asosiy hamkorlarimiz",
+  "НАШИ ИДЕИ": "BIZNING G'OYALARIMIZ",
+  "ПОЧЕМУ МЫ": "NIMA UCHUN BIZ",
+  "НАШИ КЛИЕНТЫ": "BIZNING MJOZLARIMIZ",
+  "НАШИ ДОСТИЖЕНИЯ": "BIZNING YUTUQIMIZ",
+  "Тикер": "Ticker",
+  "Последняя цена": "Oxirgi narx",
+  "Изменение": "O'zgarish",
+  "Объём": "Hajm",
+  "Рыночная кап.": "Bozor qiymati",
+  "График за месяц": "Oylik jadval",
+  "Название": "Nomi",
+  "Аналитические обзоры": "Analitik materiallar",
+  "Акции": "Aksiya",
+  "партнёры": "hamkorlar",
+  "Руководители": "Kompaniya rahbariyati",
+  "Сектор": "Sektor",
+  "Промышленность": "Sanoat",
+  "Имя": "Ism",
+  "Описание": "Tavsif",
+  "Должность": "Lavozim",
+  "Трейдинг": "Treyding",
+  "Как начать -  ТОРГОВАТЬ": "Treydingni boshlash",
+  "Как начать торговать": "Treydingni boshlash",
+  "перейти на страницу": "sahifaga o'ting",
+  "Тарифы для юридических лиц": "Yuridik shaxslar uchun tariflar",
+  "Корпоративным и": "Korporativ va",
+  "институциональным клиентам": "institutsional mijozlarga",
+  "Корпоративным и институциональным клиентам": "Korporativ va institutsional mijozlarga",
+  "Инвестиции": "Investitsiyalar",
+  "Всего капитал": "Jami kapital",
+  "сум": "so'm",
+  "Открытые Сделки/Позиции,Портфель": "Ochiq savdolar",
+  "Компания": "Kompaniya",
+  "Profit & Loss": "Foyda va Zarar",
+  "перейти в кабинет": "kabinetga o'tish",
+  "КЗЛ": "KZL",
+  "Сохранить": "Saqlash",
+  "Новый пароль": "Yangi parol",
+  "Текущий пароль": "Joriy parol",
+  "Подтвердить новый пароль": "Yangi parolni tasdiqlang",
+  "Введите сумму": "Summani kiriting",
+  "Пополнение счёта": "Hisobni to'ldirish",
+  "Номер договора": "Shartnoma raqami",
+  "Имя Фамилия": "Name",
+  "Тип ЦБ": "Qimmatli qog'ozlar turi",
+  "Кол-во ЦБ": "Qimmatli qog'ozlar soni",
+  "Cумма инвестиций": "Investitsiyalar summasi",
+  "Тек. цена": "Joriy narx",
+  "Цена окупаемости инвестиции": "Investitsiyaning qaytarilish summasi",
+  "Войти в личный кабинет": "Shaxsiy hisobingizni kiriting",
+  "Дата / Cрок погошения": "Sana / To'lov muddati",
+  "Кабинет": "Kabinet",
+  "Наши награды": "Bizning mukofotlarimiz",
+  "Цена закрытия": "Oxirgi narx",
+  "Дневной диапозон": "Kun oralig'i",
+  "52 недельный диапозон": "52 hafta oralig'i",
+  "52 недельный Объём": "52 haftalik hajm",
+  "Простые акции": "Oddiy aksiya",
+  "Привилегированные акции": "Imtiyozli aksiya",
+  "Рыночная капитализация": "Bozor kapitalizatsiyasi",
+  "Изменения за месяц": "Oylik o'zgarishlar",
+  "Изменения за год": "Yillik o'zgarishlar",
+  "В случае капитализации": "Kapitalizatsiya holatida",
+  "Номинальная стоимость": "Nominal narx",
+  "Дивиденды": "Dividend",
+  "Сумма": "Summa",
+  "Дивидендная история": "Dividend tarixi",
+  "Доходность": "rentabellik",
+  "Дата размещения": "Joylashtirilgan sanasi",
+  "Дата погошения": "Yonayotgan sana",
+  "Номинал": "Nominal",
+  "Срок обращения": "Muomala muddati"
 }
