--- a/resources/lang/uz.json
+++ b/resources/lang/uz.json
@@ -165,5 +165,11 @@
   "Дата размещения": "Joylashtirilgan sanasi",
   "Дата погошения": "Yonayotgan sana",
   "Номинал": "Nominal",
-  "Срок обращения": "Muomala muddati"
+  "Срок обращения": "Muomala muddati",
+  "Портфель": "Portfel",
+  "Сумма инвестиций": "Jami Investitsiya",
+  "Обьем портфеля": "Portfeldagi hajmi",
+  "Потенциал роста": "O'sish salohiyati",
+  "Ожидаемые дивиденды": "Kutilayotgan dividendlar",
+  "Прогнозный доход от инвестиций": "Investitsiyadan kutilayotgan daromad"
 }
